新增 1 个方法, 增加 语法高亮, 优化结构

--- a/funnyFunction.css
+++ b/funnyFunction.css
@@ -89,3 +89,10 @@ body {
     background: #1f8dd6;
     color: #fff;
 }
+
+.fnExample textarea {
+    width:100%;
+    background:#181a3a;
+    color:#def;
+    height:auto;
+}
